# rosbag_manip

./: .gitignore  .gitmodules  README.md  commands.txt  pyproject.toml
.github/workflows/: python_test.yml
config/: compare_timestamps_two_image_data.yaml  convert_ros2_to_ros1.yaml  crop.yaml  downsample.yaml  downsample_filter.yaml  explanations.yaml  extract_images_to_npy.yaml  extract_odometry_to_csv.yaml  hertz_analysis.yaml  hertz_analysis_tf.yaml
config/view_imu_data/: view_imu_data_euroc.yaml  view_imu_data_graco_aerial_01.yaml  view_imu_data_graco_ground_01.yaml  view_imu_data_hercules_drone1.yaml  view_imu_data_hercules_drone2.yaml  view_imu_data_hercules_husky1.yaml  view_imu_data_hercules_husky2.yaml
examples/: FoundStereo_to_npy.py  LeftRectified_to_npy.py  graco_bag_to_gt_odom.py  herculesv1.2_extract_depth.py  herculesv1.3_to_bag.py  herculesv1.4_to_bag.py  rescale_images.py  stereo_rectify_undistort.py  tartanair_to_bag.py  visualize_imu.py  visualize_odom.py
examples/Hercules_V1.4/: extract_depth.py  extract_images.py  extract_pose.py  to_bag.py  vins_mono_reformatting.py
src/robotdataprocess/: CmdLineInterface.py  __init__.py  __main__.py  conversion_utils.py
src/robotdataprocess/data_types/: Data.py  ImageData.py  ImuData.py  OdometryData.py  PathData.py
src/robotdataprocess/rosbag/: Ros2BagWrapper.py
src/rosbag_manip/: __init__.py  __main__.py  command_line.py  conversion_utils.py  rosbag_manip.py  temp.py
src/rosbag_manip/data_types/: Data.py  ImageData.py  ImuData.py  OdometryData.py
src/rosbag_manip/rosbag/: Ros2BagWrapper.py
src/rosbag_manipulation/: __main__.py  crop.py  downsample.py  hertz_analysis.py  main.py  rosbag_manipulator.py  typestore.py
tests/: .gitignore  test_CmdLineInterface.py  test_ImageData.py  test_ImuData.py  test_OdometryData.py  test_rosbag_manipulator.py  test_utils.py
tests/files/test_ImageData/test_from_npy_files/32fc1/: 0.050000.npy  0.200000.npy  0.250000.npy  0.300000.npy  0.350000.npy  0.400000.npy  0.450000.npy
tests/files/test_ImageData/test_to_npy/depth/: 0.100000.npy  0.150000.npy  0.500000.npy
tests/files/test_OdometryData/test_from_csv/: odomGT.csv  vins_result_no_loop.csv
tests/files/test_OdometryData/test_from_txt_file_AND_get_ros_msg_AND_from_ros2_bag/: odom.txt
tests/test_bags/: .gitignore
tests/test_bags/hercules_test_bag_pruned_3/: metadata.yaml
tests/test_outputs/: .gitignore
tests/test_outputs/test_from_txt_file/: odom.txt
