[project]
name = "rosbag_manipulation"
version = "0.0.1"
authors = [
  { name="Daniel Butterfield", email="danielcbutter@gmail.com" },
]
description = "A library for manipulation ROS2 bags in a deterministic manner."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

# == License information TBD ==
# license = ""
# license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lunarlab-gatech/rosbag_manipulation"
Issues = "https://github.com/lunarlab-gatech/rosbag_manipulation/issues"

[build-system]
requires = ["hatchling >= 1.26",
            "numpy",
            "tqdm",
            "opencv-python",
            "rosbags",
            "argparse",
            "matplotlib"]
build-backend = "hatchling.build"

[project.scripts]
rosbag_manipulation = "rosbag_manipulation.__main__:app"