[project]
name = "rosbag_manip"
version = "0.0.3"
authors = [
  { name="Daniel Butterfield", email="danielcbutter@gmail.com" },
]
description = "A library for manipulation ROS2 bags in a deterministic manner."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["coverage",
                "matplotlib",
                "numpy",
                "rosbags",
                "scipy",
                "snakeviz",
                "tqdm",
                "typeguard",
                "typer",
                "pandas",
                "pyyaml"]

# == License information TBD ==
# license = ""
# license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lunarlab-gatech/rosbag_manip"
Issues = "https://github.com/lunarlab-gatech/rosbag_manip/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
rosbag_manip = "rosbag_manip.__main__:app"