[project]
name = "robotdataprocess"
version = "0.1.1"
authors = [
  { name="Daniel Butterfield", email="danielcbutter@gmail.com" },
]
description = "A library for loading, saving, converting, and manipulating robotic datasets."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["coverage",
                "evo",
                "matplotlib",
                "numpy",
                "opencv-python",
                "rosbags",
                "scipy",
                "snakeviz",
                "tqdm",
                "typeguard",
                "typer",
                "pandas",
                "pillow",
                "pyyaml"]

# == License information TBD ==
# license = ""
# license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/lunarlab-gatech/robotdataprocess"
Issues = "https://github.com/lunarlab-gatech/robotdataprocess/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
robotdataprocess = "robotdataprocess.__main__:app"